# arc-bridge

./: .flake8  .gitignore  .gitmodules  README.md  config.py  environment.yml  gamepad_reader.py  gen_lcm_types.sh  gen_lcm_types_win.cmd  lcm2mujuco_bridge.py  moving_window_filter.py  pyproject.toml  requirements.txt  robot_mujoco.py  state_estimator.py  utils.py
.github/workflows/: ci.yml  ci_win.yml
arc_bridge/: config.py  main.py  run_lcm_spy.py
arc_bridge/bridges/: __init__.py  arm2link_bridge.py  biped_linefoot_bridge.py  hopper_bridge.py  (+6 more)
bridges/: __init__.py  arm2link_bridge.py  biped_linefoot_bridge.py  biped_pointfoot_bridge.py  hopper_bridge.py  lcm2mujuco_bridge.py  tron1_linefoot_bridge.py  tron1_pointfoot_bridge.py  tron1_wheeled_bridge.py
examples/: pendulum_controller.m  pendulum_controller.py
lcm_types/: arm2link_control_t.lcm  arm2link_state_t.lcm  biped_control_t.lcm  biped_linefoot_control_t.lcm  biped_linefoot_state_t.lcm  biped_pointfoot_control_t.lcm  biped_pointfoot_state_t.lcm  biped_state_t.lcm  gamepad_cmd_t.lcm  gen_lcm_types.sh  hopper_control_t.lcm  hopper_state_t.lcm  pendulum_control_t.lcm  pendulum_state_t.lcm  run_lcm_spy.sh  tron1_linefoot_control_t.lcm  tron1_linefoot_state_t.lcm  tron1_pointfoot_control_t.lcm  tron1_pointfoot_state_t.lcm  tron1_wheeled_control_t.lcm  tron1_wheeled_state_t.lcm
scripts/: apply_lcm_patch.py
sdk_interface/: tron1_sdk_interface.py
state_estimators/: __init__.py  floating_base_linear_state_estimator.py  hopper_state_estimator.py  kalman_filter.py
tests/: test_bridge.py  test_lcm_msg.py
(+35 files in other folders)
